minor CSS changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,12 @@
  *= require_self
  */
  @import "bootstrap";
+
+ div#signin{
+ margin-top: 100px;
+ margin-right: 5%;
+ }
+ div#edit{
+ margin-top: 70px;
+ margin-right: 5%;
+ }
