--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
+<div id="edit">
 <div class="row">
   <div class="col-lg-4 col-md-6 ml-auto mr-auto">
     <h1 class="text-center">Account</h1>
-
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= devise_error_messages! %>
       <div class="form-group">
@@ -37,5 +37,7 @@
     <hr>
 
     <p class="text-center"><%= link_to "Deactivate my account", registration_path(resource_name), data: { confirm: "Are you sure? You cannot undo this." }, method: :delete %></p>
+    <div class="text-center" style="font-size: 15px"><%= link_to "Home", root_path,method: :get%></div>
   </div>
+</div>
 </div>
