--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,3 +1,4 @@
+<div id="signin">
 <div class="row">
   <div class="col-lg-4 col-md-6 ml-auto mr-auto">
     <h2 class="text-center">Reset your password</h2>
@@ -17,4 +18,5 @@
       <%= render "devise/shared/links" %>
     </div>
   </div>
+</div>
 </div>
