--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,13 +3,17 @@
   <head>
     <title>Twitter</title>
     <%= csrf_meta_tags %>
-
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-
+    <%if user_signed_in? %>
+      <%= render 'home/signed_in_nav'%>
+    <%else%>
+      <%= render 'home/signed_out_nav'%>
+    <%end%>
     <%= yield %>
   </body>
 </html>
